fixed spacing issues and opacity

--- a/client/recipe-book-spa/src/css/homeStyles.css
+++ b/client/recipe-book-spa/src/css/homeStyles.css
@@ -66,7 +66,7 @@
   object-fit: contain;
   right: 0px;
   height: 100%;
-  opacity: 0.5 !important;
+  opacity: 0.5;
 }
 
 .searchIcon {
