--- a/client/recipe-book-spa/src/css/searchStyles.css
+++ b/client/recipe-book-spa/src/css/searchStyles.css
@@ -133,8 +133,8 @@
   bottom: 0px;
   background-color: rgba(0, 0, 0, 0.753);
   right: 0px;
-  top: -140px !important;
-  z-index: 20000;
+  top: -140px;
+  z-index: 200000;
 }
 
 .finishedFilterActive {
